--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
     <div class="container">
         <div class="item">
-            <img src="download-7-3951830073.webp" alt="" class="h-[350px] w-full object-cover transition duration-500 group-hover:scale-105 sm:h-[450px]">
+            <img src="img/strudel.webp" alt="" class="h-[350px] w-full object-cover transition duration-500 group-hover:scale-105 sm:h-[450px]">
             <div>
                 <h2>Malang Strudel</h2>
                 <p>Kue lapis renyah dengan isian buah-buahan segar dan krim vanila. Cocok untuk camilan atau hidangan penutup yang manis dan menyegarkan.</p>
